# gp4aes

./: .gitignore  README.md  pyproject.toml
config/: finland_daily_forecast.json  finland_hourly_forecast.json  finland_hres.json  finland_lres.json
datasets/: finland_coast_daily.nc  finland_forecast_14_04_17_04.nc  finland_ocean_color_14_04_17_04.nc
results/: GP_mission.h5  LSQ_mission.h5  finland_complete_mission.h5  finland_hres.h5  finland_hres_oceancolor.h5  finland_lres.h5  traj_finland_hres_oceancolor.h5  traj_finland_hres_oceancolor_new.h5
scripts/: Demo.py  plot_comparison.py  plot_results_after_mission.py  read_nc_into_h5_file.py  run_mission.py  test_GP_with_scattered_data_points.py  train_kernel_GP.py
src/gp4aes/controller/: front_tracking.py
src/gp4aes/estimator/: GPR.py  LSQ.py  train_kernel_GP.py
src/gp4aes/plotter/: comparison_plotter.py  mission_plotter.py  plot_gp.py  plot_interp.py  plot_mission.py  traj_orth_error.py
src/gp4aes/util/: GeoGrid.py  compare_data.py  gpr_augmented.py  parseh5.py
