[tool.poetry]
name = "gp4aes"
version = "0.1.0"
description = "Gaussian Processes for Adaptive Environmental Sampling"
authors = ["Joana Fonseca <jfgf@kth.se>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.1.3"
h5py = "^3.7.0"
pydoe = "^0.3.8"
numpy = "^1.23.5"
scipy = "^1.9.3"
matplotlib = "^3.6.2"
geopy = "^2.3.0"
netcdf4 = "^1.6.2"
scienceplots = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
